--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
