--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1"
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^6.0.1",
+    "react-scripts": "5.0.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
