--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.0.1",
     "react-scripts": "5.0.1",
